Fix position des cartes jouées, ajout du nombre de plis

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
-Affichage des piles et plis
 Affichage de l'atout
-Groupement des menus
+Affichage du score (donnes)
+Affichage du joueur actif
+Grouepement des menus
 Virer le mode 2 joueurs
 Algo min-max
-Réseau
-
-...
+Reseau
