Ajout affichage atout, affichage joueur actif, Ajout de make run

--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
-Affichage de l'atout
 Affichage du score (donnes)
-Affichage du joueur actif
-Grouepement des menus
+Groupement des menus
 Virer le mode 2 joueurs
 Algo min-max
 Reseau
