--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 Ceci est un jeu de Bridge Chinois. 
 pour compiler : javac *.java
-pour run : java *.java
+pour run : java TestJeu
 
-### FINIR CE README ###
