--- a/TODO
+++ b/TODO
@@ -1,16 +1,24 @@
 -Menus
-*Groupement des menus
-*Gestion annuler chargement partie
+* Groupement des menus
+* Ajout des options
 
 -Jeu
-*Calcul du score par donnes (apparament ca fait toujours par pli)
-*Algo min-max
-*Indices
-*Aides
+* Calcul du score par donnes (apparament ca fait toujours par pli)
+* Algo min-max
+* Gestion chargement des parties/Sauveguardes
+* Pouvoir jouer apres annuler/refaire
+* Gestion nouvelle partie
+* Mode apprendre a jouer
 
 -Graphisme
-*Indice graphique sur les cartes
+* Virer un indice non suivi
+* Triche (voir main adverse/dernier pli)
+
+-Son
+* Gestion de relecture d'un son (fait déconner l'annulation d'un chargement, l'abandon, ...)
+* ???
 
 -Reseau
 * Mode lan ou internet
 * Choisir un username
+* Fix echec envoie d'objets
